# CppNDCapstone

./: CMakeLists.txt  README.md  dataloaders.tpp  download_mnist.py  mnist.cpp  net.cpp  net.h
